sidebar corrections (align icons and text)

--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,3 @@ li.footer {
 .e-mail {
     font-size: 0.8em;
 }
-
-.nav-link {
-    display: flex;
-    height: fit-content;
-    align-content: center
-}
